--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,23 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# AWS/Secrets
+*.pem
+
 .nx/cache
 .nx/workspace-data
 
 .angular
 
 __screenshots__/
+
+# Claude
+.claude/
+
+# Markdown files
+*.md
